MEVN 교과서 1, 5 수정

--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -81,8 +81,7 @@ excerpt: MEVN교과서 (1)
 
 ### 4.2 D3.js : 지도매핑모듈
 - topojson과 geojson비교
-- 메르카토르 도법과 geolib 라이브러리
-- 지도 매핑모듈과 zoom이벤트
+- D3.js를 이용한 지도그리기 및 줌이벤트
 
 ### 4.3 D3.js : 증가하는 숫자
 - d3.pie소개
