--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -662,8 +662,8 @@ main2();
 
 ## 4. Delete
 ```js
-userModel.deleteMany({}).lean();  
-userModel.collection.drop()  
+Photo.deleteMany({}).lean();  
+Photo.collection.drop()  
 ```
 제거는 이렇게 하면 됩니다.이렇게 간단하게 CRUD를 살펴보았습니다.  
 
