--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -141,8 +141,7 @@ console.log(ret)
 ```
 그렇다면 커링을 한번 만들어보겠습니다. 
 `k_curry`, 2개의 인자를 받을 수 있는 커리를 만들었고 그 커리로 `f`를 래핑, 감싸줍니다. 이제 f는 커링이 가능한 **더하기함수**가 됩니다. 
-저런식으로 평가시점을 늦출 수 있습니다. ES6버전은 위와 같고 ES5버전은 다음과 같습니다. 
-
+저런식으로 평가시점을 늦출 수 있습니다. ES6버전은 위와 같고 ES5버전은 아래와 같습니다. 
 ```js
 var k_curry = function(fn){
     return function(a){
@@ -187,25 +186,19 @@ export const curry = f =>
  
 
 
-#### 4. 함수 합성
-합성시키는 것은 compose와 pipe가 있는데 R.compose는 오른쪽에서 왼쪽으로 로직이 흘러간다면  
+#### 4. 함수 합성  
 ```js
 const R = require('ramda') 
 R.compose(Math.abs, R.add(1), R.multiply(2))(-4) //=> 7
 ```
-pipe는 왼쪽에서 오른쪽으로 흘러가며 `point-free` 형으로 짤 수가 있습니다. 보통 저는 `pipe`를 씁니다.
-
-절차지향형에 익숙한 방법이며 이 방법을 point-free방법이라고 합니다. 
+합성시키는 것은 compose와 pipe가 있습니다. R.compose는 위의 코드처럼 오른쪽에서 왼쪽으로 로직이 흘러갑니다.
 ```js
 const f = R.pipe(Math.pow, R.negate, R.inc); 
 f(3, 4); // -(3^4) + 1
 ```
+pipe는 왼쪽에서 오른쪽으로 흘러가며 커링이 적용된 덕에 `point-free` 형으로 짤 수가 있습니다. 보통 저는 `pipe`를 씁니다.
 
 #### 5. 파괴적인 함수를 쓰지 않습니다. 
-
-splice는 배열을 파괴합니다. 
-하지만 slice는 파괴를 하지 않고 1을 제외한 나머지 배열 요소들을 추출해낼 수 있습니다. 
-되도록 payload를 파괴하지 않는 함수를 써야 합니다. 
 ```js
 const a = [1, 2, 3, 4, 5]  
 let b = a.slice(1)
@@ -217,11 +210,10 @@ console.log(a, b)
 [ 1 ] [ 2, 3, 4, 5 ]
 */
 ```   
-#### 6. Point -free
-
-무인수 프로그래밍입니다. 인자를 신경쓰지 않고 구현하는 것을 뜻합니다. 
-커링을 통해 구현할 수 있습니다.
-
+splice는 배열을 파괴합니다. 
+하지만 slice는 파괴를 하지 않고 1을 제외한 나머지 배열 요소들을 추출해낼 수 있습니다. 
+되도록 payload 또는 원본 요소를 파괴하지 않는 함수를 써야 합니다. 
+#### 6. Point -free 
 ```js
 const map = fn => list => list.map(fn); 
 const add = x => y => x + y; 
@@ -232,6 +224,8 @@ var a = incrementAll([1, 2, 3]); // [2, 3, 4]
 var b = incrementAllWithPointFree([1, 2, 3]); // [2, 3, 4]
 console.log(a, b)
 ```
+아까 말했던 Point-free, 무인수 프로그래밍입니다. 인자를 신경쓰지 않고 구현하는 것을 뜻합니다. 
+커링이 적용된다면 인자를 집어넣지 않아도 됨을 뜻합니다.  
 
 #### 7. 모나드
 어떠한 값의 결과가 불확실하게 2가지형태 이상으로 나타날 수 있습니다. 이럴 때 컨테이너로 래핑하여 안전하게 연산을 하는 것을 말합니다. 함수형프로그래밍에서는 참조투명성, 입력과 출력이 동일하게 1 : 1 매칭이 되어야 하기 때문에 `try catch`를 쓰게 되면 로직을 담고 있는 컨테이너의 벨트의 라인이 2개로 분리되어 투명성을 잃게 되기 때문입니다. (물론 `try catch`를 써서 애러처리를 할 수도 있습니다만 함수형 프로그래밍에서 써야한다. 안써야 한다. 라고 하는 주장이 나눠집니다. 케바케입니다. 참고로 저는 씁니다.) 
@@ -254,6 +248,7 @@ const log = x => console.log(x)
 fg('{"temp":36.5}').catch(_ => 'JSON PARSE is not working').then(log)
 ``` 
 
+{"temp":36.5}라는 문자열을 g를 이용해서 JSON Object로 변환합니다. 이 때 Promise를 이용해서 오류가 있다면 then(f)가 아닌 catch로 넘어가게 합니다. 
 #### 7.2 Promise를 이용한 예
 ```js
 const log = console.log
@@ -273,6 +268,7 @@ fg("큰돌").catch(_ => _).then(log)
 객체에 없습니다.
 */
 ```
+아까 보았던 코드와 같은 구조이지만 다른 예제입니다. 
 
 #### 8. 제너레이터와 이터레이터
 제너레이터를 써서 순차적인 로직 구현과 지연효과를 쉽게 설계할 수 있습니다. 
@@ -283,9 +279,9 @@ function *map(f, list){
     }
 }
 ``` 
-
-또한 제너레이터는 **이터레이터**를 손쉽게 만들 수 있으며 **코루틴**이 가능합니다.
+list라는 배열의 요소 a를 대상으로 f를 순차적으로 실행(평가)하는 함수 map입니다. 이렇게 함수에 *를 붙으면 제너레이터가 되는데 제너레이터는 **이터레이터**를 손쉽게 만들 수 있으며 **코루틴**이 가능합니다.
 #### 8.1 제너레이터의 코루틴
+코루틴이란 뭘까요?
 1. yeild문이 발동하면 스택프레임에 복사를 하고 콜스택에서는 제거를 합니다.
 2. 그리고 next()문이 발동하면 스택프레임을 복원하여 실행해서 진입점을 개발자가 원하는 데로 실행이 가능하게 설계할 수 있습니다. 
  
@@ -300,7 +296,7 @@ function *map(f, list){
  - 이터레이터: `{ value, done }` 객체를 리턴하는 `next()` 를 가진 값
  - 이터러블/이터레이터 프로토콜: 이터러블을 `for...of`, `전개 연산자` 등과 함께 동작하도록한 규약
 
-... 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. `const [head, ...tail] = f();`
+... 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. 예) `const [head, ...tail] = f();`
 
 #### 8.3 제너레이터와 이터러블
 제너레이터는 커스텀형 이터레이터로 함수자체가 이터러블을 생성합니다.
@@ -413,13 +409,10 @@ function center(scale) {
   };
 }
 ``` 
-
-이렇게 private 변수를 흉내내는 것 말고 어떤 시점에서의 시점을 이어가는 데도 쓰입니다. 
-
-이렇게 함수형 프로그래밍의 주된 9개의 특징을 살펴 보았습니다. 
+이렇게 private 변수를 흉내내는 것 말고 어떤 시점에서의 시점을 이어가는 데도 쓰입니다. 이렇게 함수형 프로그래밍의 주된 9개의 특징을 살펴 보았습니다. 
 
 ### 3.1.2 함수형프로그래밍의 응용예제  
-
+그렇다면 좀 더 응용한 예제를 살펴보도록 하겠습니다. 
 #### 1. 배열안에서의 비동기 순서로직
 아래를 그저 map이라는 함수를 써서 하면 순차적인 비동기 로직이 아니라 pending 6개가 찍혔다가 동시에 실행이 될 것입니다.
 유인동이라는 개발자님이 만든 `partial.js`라는 라이브러리를 사용해보는 것이 어떨까요? 쉽게 비동기 순서 로직을 짤 수 있습니다.
@@ -468,7 +461,7 @@ console.log(a)
 
 ``` 
 
-함수형 프로그래밍을 한다면 유인동개발자님이 만든 FX.js를 사용하는 것이 좋습니다. 유인동개발자님은 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람 중 하나이며 lodash, ramda의 장점을 섞어 만든 partial.js의 장본인입니다.  FX.js는 partial.js의 다음 버전 라이브러리입니다. 
+함수형 프로그래밍을 한다면 유인동개발자님이 만든 fx.js를 사용하는 것이 좋습니다. 유인동개발자님은 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람 중 하나이며 lodash, ramda의 장점을 섞어 만든 partial.js의 장본인입니다.  fx.js는 partial.js의 다음 버전 라이브러리입니다. 
 당연히 사용하기도 편리하고 성능도 좋습니다. 앞으로 이어나갈 모든 코드들에는 fx.js가 포함될 예정입니다. 
 함수형 프로그래밍을 조금 더 알고 싶다면 [유인동의 함수형프로그래밍](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/#) 을 보기를 권장드립니다.  
 
@@ -594,8 +587,7 @@ console.log(a)
 
 그렇다면 LAZY load는 어떻게 구현할까요? 
 먼저 심플한 서버를 구축합니다. 
-
-전에 구축했던 서버랑 비슷합니다. dist라는 폴더를 사용자에게 제공하는 서버입니다. 
+#### MEVN/3장/server.js 
 ```js
 const express = require('express');
 const path = require('path')
@@ -606,8 +598,11 @@ app.listen(12010, ()=> {
   console.log('lazy 이미지서버 : 12010시작 http://127.0.0.1:12010');
 });
 ```
+전에 구축했던 서버랑 비슷합니다. dist라는 폴더를 사용자에게 제공하는 서버입니다. 
 
-html을 만듭니다. 트와이스 모모를 좋아하기 때문에 모모이미지 카드들로 만들어진 html파일입니다. 
+#### Q. 여기서 dist 폴더가 아닌 public이라는 폴더를 제공한다면 어떤 코드를 수정해야 할까요?
+
+#### MEVN/3장/dist/index.html
 ```html
 <!DOCTYPE html>
 <html lang="ko">
@@ -655,10 +650,10 @@ html을 만듭니다. 트와이스 모모를 좋아하기 때문에 모모이미
 </body>
 </html>
 ``` 
+html을 만듭니다. 트와이스 모모를 좋아하기 때문에 모모이미지 카드들로 만들어진 html파일입니다. 
 ![lazy_load전](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_img_lazy.PNG)
 
-정말 이쁜 예제 입니다. 하지만 15장의 이미지를 한꺼번에 로드하는 것은 부하가 큽니다. 자 이제 lazyload를 구현해봅시다. 
-
+정말 이쁜 예제 입니다. 하지만 15장의 고화질 이미지를 한꺼번에 로드하는 것은 부하가 큽니다. 자 이제 lazyload를 구현해봅시다. 
 
 그냥 `document.querySelectorAll("img.lazy")`를 하면 유사배열인 NodeList로 배열의 메소드인 filter나 forEach를 쓰지 못합니다. 따라서 배열로 만들어 주어야 하므로 빈배열에 slice로 얕은복사(shallow copy)를 하고 call을 통해 인자로 `document.querySelectorAll("img.lazy")` 넣으면 유사배열인 NodeList를 진짜배열로 만들 수 있습니다.
 
@@ -666,10 +661,10 @@ html을 만듭니다. 트와이스 모모를 좋아하기 때문에 모모이미
 
 > slice는 얕은 복사로 빈배열이 아닌 객체가 들어가 있는 배열을 복사하면 원본 객체가 수정이 되면 복사한 객체도 수정이 됩니다. 빈배열을 복사했기 때문에 얕은 복사라도 상관이 없습니다. 단지 배열의 prototype 메소드인 filter 등을 사용할 수 있기 때문에 저렇게 구현했습니다. 
 
-
 > 그렇다면 data-큰돌은 data.큰돌로 접근이 가능하겠죠? 여러모로 응용이 가능한 dataset입니다. 
 
 그리고 할 때마다 lazyImages를 갱신시킵니다. 이미 지웠다면 신경쓸 필요가 없겠죠? 그 이후 만약 길이가 없다면, 다 완료가 되었다면 removeEventListener로 이벤트를 지웁니다. 이렇게 하면 스크롤 할 때 흐릿한 이미지가 분명한 트와이스 이미지로 바뀌면서 구현이 되고, 처음에 15장의 이미지를 동시에 받지 않고 볼 때마다 받는 lazy-load가 완성이 됩니다. 
+이 예제는 저화질의 blur이미지 한장이 기본적으로 받아지지만, 각각 해당하는 이미지의 **저화질**이미지를 만들어서 구현하는 것이 일반적입니다. 15장의 이미지를 모두 로드한다쳐도 저화질이기때문에 데이타소모가 심하지 않습니다. 
 
 ```js
 document.addEventListener("DOMContentLoaded", function() {
@@ -746,9 +741,8 @@ article{
 `library book article`보다는 `library article`이 좋습니다. 
 
 #### 5. repaint 와 reflow를 최소화 한다 
-
 애니메이션을 할 때는  transform, filter, opacity를 사용해야 합니다. 
-그냥 top, left를 걸어버리면 repaint와 reflow가 일어나는데 저 속성을 걸게 되면 GPU에 업로드되어 
+그냥 top, left가 움직이게끔 한다면 repaint와 reflow가 일어나는데 저 속성을 걸게 되면 GPU에 업로드되어 
 repaint와 reflow가 일어나지 않습니다. 
 
  > 화면이 구성될 때 랜더링레이어와 그래픽레이어로 분리되며 구성이 되는데 렌더링레이어에 포함이 되면 reflow, repaint가 일어나며 그래픽레이어에 포함된다면 그것들이 안일어나며 GPU하드웨어 가속이 적용됩니다.  
@@ -772,4 +766,4 @@ repaint와 reflow가 일어나지 않습니다.
 #### 6. 스타일을 재사용한다. 
 제일 중요합니다. 많은 컴포넌트들 사이에서 재사용할 클래스를 미리 지정해 놓고 사용하는 것이 중요합니다. 예를 들어 A컴포넌트에서 `display : flex`를 사용하는데 B 컴포넌트에서도 `display : flex`를 사용한다면 좋지 않습니다. 부모 컴포넌트에서  `display : flex`를 정의한 후 재사용하는 것이 좋습니다. 
 
-이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 예술품사이트를 만들고 실시간 데이터 시각화 프로그램을 만들 것입니다.
+이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 실시간 데이터 시각화 프로그램을 만들고 예술품 경매사이트를 만들 것입니다.
