--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -80,7 +80,7 @@ myChart.setOption(option, true);
 ```
 
 #### three.js 버전 : 0.106.2
-three.js는 가장 유명한 자바스크립트 3D 라이브러리 중 하나입니다. 무겁기도 하고 하드웨어의 성능을 많이 잡아 먹기 때문에 모바일에서 이를 활용한 앱을 켰을 때 버벅거리는 증상이 나타나기도 합니다. 정말 많은 3D 차트 등을 구현할 수 있습니다. 
+three.js는 가장 유명한 자바스크립트 3D 라이브러리 중 하나입니다. 무겁기도 하고 하드웨어의 성능을 많이 잡아 먹기 때문에 모바일에서 이를 활용한 앱을 켰을 때 버벅거리는 증상이 나타나기도 합니다. 정말 많은 3D 차트 등을 구현할 수 있습니다. 자바스크리브로 3D를 구현하자면 필수적인 라이브러리입니다. 
 
 #### D3.js 버전 : 5.9.7
 D3.js는 3D는 아니지만 2D로 구현이 가능한 모든 시각화적인 것들을 구현할 수 있습니다. 차트, 맵은 기본이며 중력도 구현이 가능하며 워드클라우드, 플로우, 못하는 것이 없습니다. 하지만 D3.js를 이용하기 위해서는 데이타가 어떻게 그려지는지 원리부터 차근차근 알아가야 쓸 수 있습니다. chart.js나 echart.js처럼 간단히 데이타만 넣고 알아서 차트가 그려지지는 않습니다. 
@@ -93,23 +93,16 @@ D3.js는 3D는 아니지만 2D로 구현이 가능한 모든 시각화적인 것
 D3.js로는 많은 것을 만들 수 있습니다. 그 중에 하나가 바로 지도입니다. 
 
 #### 4.2.1 topojson과 geojson비교
-지도를 그리기 앞서 topojson과 geojson에 대해 알아봅시다. 
-
-topojson이나 geojson 모두 지도를 그리기 위한 재료인데요. 
-
-다양한 지리적 데이터 구조를 표현하기 위해 인코딩된 json입니다.
+지도를 그리기 앞서 topojson과 geojson에 대해 알아봅니다. topojson이나 geojson 모두 지도를 그리기 위한 재료이자 지리적 정보들을 담고 있는 데이타 입니다. 다양한 지리적 데이터 구조를 표현하기 위해 인코딩된 json입니다.
 
 좀 더 자세히 설명하자면, 지도를 그리는데 있어 레스터 방식과 벡터 방식이 있습니다. 레스터 방식은 이미지를 확대하면 깨지는 픽셀단위의 그림을 생각하면 되고 벡터 방식은 픽셀데이터가 아닌 점, 선 , 면 등 기하학적인 모양을 저장하며 확대하더라도 "깨지지 않는" 데이터 방식을 말합니다. 이 벡터 방식을 가지고 있는 지리데이타 포맷중에 geoJSON, topoJSON 등이 있으며 오늘은 topojson을 쓸 것입니다.  
 
-topojson은 geojson에 비해 파일 사이즈가 작은 장점을 가지고 있으며,  
+topojson은 geojson에 비해 파일 사이즈가 작은 장점을 가지고 있으며, 기하학적인 조정을 json파일에 가한다면 geojson을 쓰고, 그렇지 않다면 심플한 topojson을 씁니다. 또한 geojson은 coordinate속성을 반드시 있어야 하며 경계정보가 중복되어서 나타납니다. 
 
-기하학적인 조정을 json파일에 가한다면 geojson을 쓰고, 그렇지 않다면 심플한 topojson을 씁니다. 
+하지만 topojson은 경계는 arc속성으로 이루어져 중복이 되지 않으며 위상(topology)에 따라 인코딩됩니다. 따라서 topojson이 geojson보다 약 10배정도 가볍습니다. 
 
-또한 geojson은 coordinate속성을 반드시 있어야 하며 경계정보가 중복되어서 나타납니다. 
-
-하지만 topojson은 경계는 arc속성으로 이루어져 중복이 되지 않고 위상(topology)에 따라 인코딩됩니다. 따라서 topojson이 geojson보다 약 10배정도 가볍습니다. 
-
-자 이제부터 실제 코드로 넘어가서 하나하나 살펴보도록 하겠습니다. 
+#### 4.2.2 D3.js를 이용한 지도그리기 및 줌이벤트
+이제 실제 코드로 넘어가서 하나하나 살펴보도록 하겠습니다. 코드가 약간 길기 때문에 차근차근 살펴보겠습니다. 
 
 ```js
 import * as d3 from 'd3';
@@ -148,7 +141,8 @@ const koreaMap = require('../map/skorea_municipalities_topo_simple.json');
 const _map = topojson.feature(koreaMap, koreaMap.objects.skorea_municipalities_geo);
 const center = d3.geoCentroid(_map);
 ```
-우리나라 topojson파일을 로드하고 `topojson.feature`을 통해 _map이라는 변수에 맵에 관련된 정보를 할당합니다. 그리고 그 맵의 중앙값을 설정합니다.   
+우리나라 topojson파일을 로드하고 `topojson.feature`을 통해 _map이라는 변수에 맵에 관련된 정보를 할당합니다. 그리고 그 맵의 중앙값을 설정합니다.
+
 ```js 
 const width = 1000;
 const height = 1000;
@@ -162,7 +156,7 @@ const map = svg.append('g');
 
 이것이 D3로 시각화하는 첫단계입니다. 
 1. 재료를 선택하고(topojson) 
-2.그 재료를 쓸 캔버스를 설정(select, append, attr)
+2. 그 재료를 쓸 캔버스를 설정(select, append, attr)
 
 ```js
 let projection = d3.geoMercator()
@@ -171,73 +165,75 @@ let projection = d3.geoMercator()
 ```
 이 지도의 투사법은 메르카토르 투사법을 씁니다. 지구는 동그라한 구형태이기 때문에 이를 평면에 펼쳐서 보기 위해서는 투사법이 존재하며 많은 투사법이 있지만 우리가 많이 보는 지도가 바로 메르카토르 투사법을 쓴 지도 입니다. 메르카토르투사법, 초기 스케일, 초기 translate를 설정해서 초기 projection 이라는 투사법이라는 객체를 셋팅합니다. 
  > 이외에도 Orthographic이라는 투사법도 있습니다. 
+```js
+const path = d3.geoPath().projection(projection);
+const bounds = path.bounds(geojson);
+const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
+const scale = 1 /Math.max(widthScale, heightScale);
+const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
+const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
+const offset = [xoffset, yoffset];
+projection.scale(scale).translate(offset);
+```
+이제 topojson이란 위경도의 정보들을 이용, 미리 설정해 놓은 투사법으로 패스를 땁니다. 우리가 보고 싶은 것은 이 패스의 중점을 보고 싶습니다. 우리나라의 중점을 말이죠 그렇기 위해서 xoffset과 yoffset등을 설정합니다. 추후 좀 더 자세히 설명하겠습니다. 
 
-        const path = d3.geoPath().projection(projection);
-        const bounds = path.bounds(geojson);
-        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
-        const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
-        const scale = 1 /Math.max(widthScale, heightScale);
-        const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
-        const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
-        const offset = [xoffset, yoffset];
-        projection.scale(scale).translate(offset);
- 이제 topojson이란 위경도의 정보들을 이용, 미리 설정해 놓은 투사법으로 패스를 땁니다. 우리가 보고 싶은 것은 이 패스의 중점을 보고 싶습니다. 우리나라의 중점을 말이죠 그렇기 위해서 xoffset과 yoffset등을 설정합니다. 좀 더 자세히 설명하겠습니다. 
-
-​
-
+```js
 d3.geoPath().projection(projection)
-
-아까 만들어 놓은 projection, 투사법으로 우리가 그리는 지도인 path 객체를 따냅니다. (자 path객체가 드디어 완성되었습니다. )
-
-        const bounds = path.bounds(geojson);
-        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
-        const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
- path.bounds(geojson)
-
+```
+아까 만들어 놓은 projection, 투사법으로 우리가 그리는 지도인 path 객체를 따냅니다. svg중 path요소로 지도를 그릴것이며 이제 그 준비단계가 끝났습니다. 
+```js
+const bounds = path.bounds(geojson);
+const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
+path.bounds(geojson)
+```
 우리는 이 path로 부터 중심을 잡고 싶습니다. 즉 경계를 잡고 싶다는 것이죠. 그러하려면 bounds를 써야 합니다.
 
-​
 
-bounds
-
+#### bounds
 bounds의 1차원배열은 path의  xmax와 xmin을 가리킵니다. bounds[0][x].. 의 0에서 0, 1을 통해 xmax와 xmin을 나타낼 수 있습니다.  즉, 최소경도, 최대경도(longitude)를 가리키게 됩니다. 
-
 bounds의 2차원배열은  ymax와 ymin을 가리킵니다. bounds[x][0]..의 0에서 0, 1을 통해 ymax와 ymin을 가리킵니다. 즉, 최소위도, 취대 위도를 가리킵니다. (latitude)
 
-
-scale
+#### scale
 
 그 다음 스케일을 정의해줍니다. 이 스케일은 지도에서 축척을 의미합니다. 넓은 우리나라 땅덩어리를 우리는 작은 화면에 표시해야 합니다.  일단 우리가 구한것은 path의 가장자리를 구한 것입니다. 
 
 이것중에서 가장 최대값을 
+```js
+const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+const heightScale = (bounds[1][1] - bounds[0][1]) / height;  
+const scale = 1 /Math.max(widthScale, heightScale); 
+```
+이렇게 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
 
-        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
-        const heightScale = (bounds[1][1] - bounds[0][1]) / height;  
-        const scale = 1 /Math.max(widthScale, heightScale);
- 이렇게 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
+#### translate
+```js
+const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
+const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
+const offset = [xoffset, yoffset];
+projection.scale(scale).translate(offset);
+``` 
+그 다음엔 위의 코드처럼 translate를 정의해주어야 합니다. 우리가 흔히 css로 어떠한 영역을 가로, 세로 중앙 정렬할 때 어떻게 할까요?  
+```css
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%; 
+  transform: translate(-50%, -50%); 
+}
+```
+위의 코드처럼 translate로 일단 사물을 옮기고 그 사물의 "크기의 50%" 만큼 또 옮기면 됩니다. 똑같이 우리가 보여주는 크기의 반인 bounds의 반을 x, y - offset으로 셋팅하고 translate를 합니다.  
+```js
+map
+.selectAll('path').data(geojson.features)
+.enter().append('path') 
+.attr('d', path);  
+``` 
 
-​
-
-translate
-
-그 다음엔 translate를 정의해주어야 합니다. 
-
-우리가 흔히 css로 가로, 세로 중앙 정렬할 때 어떻게 하죠? translate로 일단 사물을 옮기고 그 사물의 "크기"만큼 또 옴깁니다. 
-
-
-그렇기 때문에  우리가 보여주는 크기의 반을 translate를 함과 동시의 bounds 즉, 지도를 그리는 패스들의 중점을 잡고 그 크기만큼도 이렇게 옮겨줍니다..! 
-
-        map
-        .selectAll('path').data(geojson.features)
-        .enter().append('path') 
-        .attr('d', path);  
- 짠..! 이렇게만 하면 지도가 완성이 됩니다..! 
-
-
-3. 자몽을 놓을 위도 경도에 따라 매핑하기
-
-이제 자몽을 놓아 봅시다..!
-
+#### 자몽을 놓을 위도 경도에 따라 매핑하기
+우리는 자몽이라는 아이콘을 놓을 것입니다.  
+```js 
   const mapInfo = [
     {
       "name":"서울",
@@ -250,63 +246,69 @@ translate
       "lon" : "127.2483736"
     }
   ] 
- 일단 위경도 데이타를 만들고
-
-        const icons = svg.append('g').selectAll('svg')
-        .data(mapInfo)
-        .enter()  
-        .append("svg:image")
-        .attr("width", 50)
-        .attr("height", 50)
-        .attr('x' ,  d=> projection([d.lon, d.lat])[0])
-        .attr('y' ,  d=> projection([d.lon, d.lat])[1] - 100)
-        .attr('opacity', 0)
-        .attr("xlink:href", require("../icons/grapefruit.svg")) 
-        .on('click', d =>{
-          console.log(d)
-        })
-        .transition()
-        .ease(d3.easeElastic)
-        .duration(2000)
-        .delay((d, i)=> i * 50)
-        .attr('opacity', 1)
-        .attr('y' ,  d=> projection([d.lon, d.lat])[1])
-        
- 이렇게 매핑을 하면 됩니다. 우리가 만들어 놓은 위경도 자료 만큼..! svg를 붙이는 겁니다..!
-
-미리 저장해 놓은 svg를 svg:image로 불러오고 아이콘의 위치인 x와 y를 projection 메서드를 통해 잡습니다.
-
-​
-
-projection
-
-아까 정의해 놓은 projection 메소드 즉, 투사법은 경도와 위도 자료를 넣어서 dx와 dy를 반환합니다. 
-
+```
+위의 코드처럼 자몽을 놓을 위경도 데이타를 만듭니다. 
+```js
+const icons = svg.append('g').selectAll('svg')
+.data(mapInfo)
+.enter()  
+.append("svg:image")
+.attr("width", 50)
+.attr("height", 50)
+.attr('x' ,  d=> projection([d.lon, d.lat])[0])
+.attr('y' ,  d=> projection([d.lon, d.lat])[1] - 100)
+.attr('opacity', 0)
+.attr("xlink:href", require("../icons/grapefruit.svg")) 
+.on('click', d =>{
+  console.log(d)
+})
+.transition()
+.ease(d3.easeElastic)
+.duration(2000)
+.delay((d, i)=> i * 50)
+.attr('opacity', 1)
+.attr('y' ,  d=> projection([d.lon, d.lat])[1])
+```  
+이렇게 매핑을 하면 됩니다. 우리가 만들어 놓은 위경도 자료 만큼 svg를 붙이는(append) 하는 것입니다. 저렇게 attr을 이용해서 가로 세로, x좌표, y좌표, 투명도를 설정해주면 됩니다. .on을 이용해서 클릭이벤트도 설정할 수 있습니다. transition을 이용해 애니메이션도 만들었습니다. 2초(2000밀리세컨드) 만큼동안 자몽이 떨어지는 예제입니다. delay((d, i) => i * 50)을 통해 자몽의 개수만큼 차례대로 지연시간을 걸어 놓습니다. 그렇다면 차례대로 자몽이 떨어지게 됩니다. 예를 들어 자몽1은 0, 자몽2는 50밀리세컨드만큼 늦어지게 되는 것입니다. 
+ 
+#### projection 
+```js
   function projection(point) {
     point = projectRotate(point[0] * __WEBPACK_IMPORTED_MODULE_5__math__["r" /* radians */], point[1] * __WEBPACK_IMPORTED_MODULE_5__math__["r" /* radians */]);
     return [point[0] * k + dx, dy - point[1] * k];
   }
- D3 내부의 projection 메소드는 이렇게 생겼습니다. 위경도에 해당하는 값을 배열로 받아서 첫번째에 그 투사법으로 추출되는 x, 경도를 반환하고 y, 위도를 반환합니다.  
+```
+ * v5에서 달라진 부분존재 추후 수정 예정
 
-​
+projection 메소드가 궁금할 것같아서 준비했습니다.  위경도에 해당하는 값을 배열로 받아서 첫번째에 그 투사법으로 추출되는 x, 경도를 반환하고 y, 위도를 반환합니다.  
 
-그리고 처음에는 투명도를 0으로 주고 transition 을 통해 마지막에는 1 그리고 delay를 줘서 차근차근 자몽이  떨어져 나오는 예제를 만든 것입니다. 
+​ 
+#### 줌이벤트 
+```js
+const zoomed = () =>{
+  map.attr('transform', d3.event.transform)
+  icons.attr('transform', d3.event.transform)
+}
+const zoom = d3.zoom().scaleExtent([1, 8]).on('zoom', zoomed)
+svg.call(zoom)
+```
+줌이벤트는 간단합니다. 이렇게 줌을 걸어주고자 하는 group에 transform 특성에 해당 event를 추가하고 zoom이 큰 svg에서 발동할 때마다 미리 설정해 놓은 이벤트들이 작동하게끔 설정해주면 됩니다.   
+call은 자바스크립트의 call을 생각하면 됩니다.
+#### call
+```js
+const 큰돌 = {
+    "이름": "큰돌"
+}
 
- * 이 이벤트는 현재 제거 되었습니다 추후 강의에 툴팁과 transition이 포함된 강의를 올리도록 하겠습니다. 
+function editmyresume(능력, 힘) {
+    this.능력 = 능력
+    this.힘 = 힘
+} 
+editmyresume.call(큰돌, "Vue.js", "팔굽혀펴기") 
+console.log(큰돌)
+```
+어떠한 함수를 실행하는데 객체를 넣어서 기본값을 설정할 수 있습니다. 
 
-
-우와 자몽이 떨어지네요..?!
-
-4. 줌이벤트
-
-        const zoomed = () =>{
-          map.attr('transform', d3.event.transform)
-          icons.attr('transform', d3.event.transform)
-        }
-        const zoom = d3.zoom().scaleExtent([1, 8]).on('zoom', zoomed)
-        svg.call(zoom)
- 줌은 이렇게 줌을 걸어주고자 하는 group에 transform 특성에 해당 event를 추가하고 zoom이 큰 svg에서 발동할 때마다 미리 설정해 놓은 이벤트들이 작동하게끔 설정해주면 됩니다.   
- 
 #### 4.2.3 지도 매핑모듈과 zoom이벤트
 
 ### 4.3 D3.js : 증가하는 숫자
