소개 내용 수정

--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -9,9 +9,20 @@ sitemap: yes
 excerpt: MEVN교과서 (1)
 
 ---  
-
-
 ![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg) 
+
+# 이 책의 장점
+다른 시각화 책을 보면 그저 html파일에 D3.js를 통해 시각화를 한 책이 있는 반면 이 책은 실제 실무에 사용되는 webpack, vue-cli, socket.io를 이용한 실시간 데이터를 대상으로 시각화한 예제로 보다 실무에 적용가능한 예제를 통해 개발실력향상을 도와줍니다. 
+또한, 기본적인 라이브러리 설명에 그치는 것보다는 2년 6개월의 MEVN 프로젝트 경험을 살린 코드로써 필수적인 것들만 담아냅니다. 프로그래밍의 패러다임과 코드를 짜는 법에 대해 서술하고 실무프로젝트가 녹아져있는 책이 되고자했습니다.
+
+또한, 실시간 데이터 시각화 프로그램뿐만 아니라 미술작가소개플랫폼제작을 통해 보다 대중적인 웹 애플리케이션을 만드는데 용이할 것입니다. 
+
+# 계획
+2019년 출판을 목표로 제가 짠 계획은 다음과 같습니다. 이 계획은 출판사와 협의하에 수정될 수 있습니다. 
+1. 오타, 코드수정, 저작권관련 편집 편집자와 회의하며 책다듬기 : 8 ~ 9월
+2. 베타리더에 의한 피드백 수렴 : 10월
+3. 최종수정 : 11월
+4. 배포 : 12월
 
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징까지 알아보게 될 것입니다.
@@ -111,7 +122,7 @@ excerpt: MEVN교과서 (1)
 ### 4.7  실시간 센서시각화사이트 : 모니터링 모듈 
 - CPU, 하드웨어 모니터링 모듈 제작
 
-## 5. 미술품 결제 사이트 제작  
+## 5. 미술작가소개플랫폼 제작
 ### 5.1 아키텍처
  - MongoDB 스키마 구축
  - 디렉토리 설계
