--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -94,12 +94,15 @@ excerpt: MEVN교과서 (1)
 - topojson과 geojson비교
 - D3.js를 이용한 지도그리기 및 줌이벤트
 
-### 4.3 D3.js : 증가하는 숫자
-- d3.pie소개
-- d3 interporate 
-- 증가하는 숫자 만들기  
+### 4.3 D3.js : 증가하는 숫자만들기
+- 화면 설정 및 반지름 설정
+- format설정 
+- 영역설정
+- 파이 제너레이터
+- 애니메이션
   
 ### 4.4  실시간 센서시각화사이트 : REST API 구축
+ - 아키텍처 구축
 - REST API 특징
 - CORS 및 주의사항
 - 요청 제한 및 IP 설정   
@@ -187,5 +190,6 @@ excerpt: MEVN교과서 (1)
 - JavaScript 실행컨텍스트와 클로저
 - 브라우저 렌더링의 이해
 - axios 와 비동기통신
+- 미니프로젝트 : 모달창 플러그인 구현
 
  
