--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -102,8 +102,113 @@ topojson은 geojson에 비해 파일 사이즈가 작은 장점을 가지고 있
 하지만 topojson은 경계는 arc속성으로 이루어져 중복이 되지 않으며 위상(topology)에 따라 인코딩됩니다. 따라서 topojson이 geojson보다 약 10배정도 가볍습니다. 
 
 #### 4.2.2 D3.js를 이용한 지도그리기 및 줌이벤트
-이제 실제 코드로 넘어가서 하나하나 살펴보도록 하겠습니다. 코드가 약간 길기 때문에 차근차근 살펴보겠습니다. 
+이제 실제 코드로 넘어가서 하나하나 살펴보도록 하겠습니다. 코드가 약간 길기 때문에 차근차근 살펴보겠습니다. 4장에 미리 만들어 놓은 코드가 있습니다. 2장과는 다른 부분이 있어 다운받아서 진행하는 것을 추천드립니다.  
 
+`npm install --save d3` 와 `npm install --save topojson`를 통해 우리가 필요한 도구들을 미리 준비합니다. 
+
+#### 전체코드 : MEVN/4장/sensor/src/views/Map.vue 
+```html
+    
+<template>
+  <div class="Map"> 
+    <div class="d3"></div>
+  </div>
+</template>
+<script>
+  import * as d3 from 'd3';
+  import * as topojson from 'topojson'; 
+  export default {
+    name: 'Map', 
+    mounted() {
+      this.draw();
+    },
+    methods: {
+      draw() { 
+        const koreaMap = require('../assets/skorea-provinces-2018-topo-simple.json');
+        const _map = topojson.feature(koreaMap, koreaMap.objects.skorea_provinces_2018_geo); 
+        const center = d3.geoCentroid(_map);
+
+        const width = 600;
+        const height = 1000;
+        const svg = d3
+          .select('.d3')
+          .append('svg')
+          .attr('width', width).attr('height', height);
+
+        const projection = d3.geoMercator()
+          .scale(1)
+          .translate([0, 0]);
+
+        const path = d3.geoPath().projection(projection);
+        const bounds = path.bounds(_map);
+
+        const widthScale = (bounds[1][0] - bounds[0][0]) / width;
+        const heightScale = (bounds[1][1] - bounds[0][1]) / height;
+        const scale = 1 / Math.max(widthScale, heightScale);
+
+        const xoffset = width / 2 - scale * (bounds[1][0] + bounds[0][0]) / 2 + 10;
+        const yoffset = height / 2 - scale * (bounds[1][1] + bounds[0][1]) / 2 + 80;
+        const offset = [xoffset, yoffset];
+        projection.scale(scale).translate(offset);
+
+        const map = svg.append('g')
+          .selectAll('path').data(_map.features)
+          .enter().append('path')
+          .attr('d', path);
+          
+        const mapInfo = [{
+            "name": "서울",
+            "lat": "37.532600",
+            "lon": "127.024612"
+          },
+          {
+            "name": "대전",
+            "lat": "36.3730178",
+            "lon": "127.2483736"
+          }
+        ]
+
+        const icons = svg.append('g').selectAll('svg')
+          .data(mapInfo)
+          .enter()
+          .append("svg:image")
+          .attr("width", 50)
+          .attr("height", 50)
+          .attr('x', d => projection([d.lon, d.lat])[0])
+          .attr('y', d => projection([d.lon, d.lat])[1])
+          .attr('opacity', 1)
+          .attr("xlink:href", require("../assets/grapefruit.svg"))
+
+        const zoomed = () => {
+          map.attr('transform', d3.event.transform)
+          icons.attr('transform', d3.event.transform);
+        }
+        const zoom = d3.zoom().scaleExtent([1, 8]).on('zoom', zoomed)
+        svg.call(zoom)
+      }
+    }
+  }
+</script>
+<style>
+  .hello {
+    width: 100%;
+  }
+
+  .d3 {
+    background: #eee;
+    width: 618px;
+    height: 1000px;
+    margin: 0 auto;
+  }
+
+  path {
+    fill: #ed8b70;
+    stroke: #de6a6c;
+  }
+</style>
+```
+
+하나하나 차근차근 알아보도록 하겠습니다. 
 ```js
 import * as d3 from 'd3';
 import * as topojson from 'topojson';
@@ -116,7 +221,7 @@ D3와 topojson을 `import` 시킵니다.
 자바스크립트 모듈문법 중 CommonJS모듈과 ES6모듈 포맷이 있습니다.
  * UMD와 AMD, System.register 모듈 포맷 방식은 여기서 설명하지 않습니다.
 
-CommonJS 포맷은 Node.js에서 사용되며 `require`와 module.exports를 사용해서 의존성과 모듈을 정의합니다. 아래와 같은 형식이죠.
+CommonJS 포맷은 Node.js에서 사용되며 `require`와 module.exports를 사용해서 의존성과 모듈을 정의합니다. 
 ```js
 const a1 = require('./a1.js')
 const a2 = require('./a2.js')
@@ -125,6 +230,8 @@ module.exports = function (){
 
 }
 ```
+위와 같은 형식입니다.
+
 ES6 모듈 포맷은 import와 export를 사용합니다. 
 ```js
 //특정 함수인 mapC만을 가져올 수 있으며
@@ -136,6 +243,8 @@ export default curry(function mapC(f, iter) {
   return takeAllC(mapLazy(f, iter));
 }); 
 ```
+
+#### 1) 
 ```js
 const koreaMap = require('../map/skorea_municipalities_topo_simple.json');
 const _map = topojson.feature(koreaMap, koreaMap.objects.skorea_municipalities_geo);
@@ -143,71 +252,52 @@ const center = d3.geoCentroid(_map);
 ```
 우리나라 topojson파일을 로드하고 `topojson.feature`을 통해 _map이라는 변수에 맵에 관련된 정보를 할당합니다. 그리고 그 맵의 중앙값을 설정합니다.
 
+#### 2) 
 ```js 
-const width = 1000;
+const width = 600;
 const height = 1000;
 const svg = d3
 .select('.d3')
 .append('svg')
-.attr('width', width).attr('height', height);
-const map = svg.append('g'); 
+.attr('width', width).attr('height', height); 
 ```
 기본 셋팅입니다. 우리가 그릴 캔버스를 설정해 놓읍시다. `class="d3"`를 가지고 있는 DOM에 `svg`태그를 `append`시키고 그 영역에 width의 값과 height의 값을 설정합니다. 그리고 그 svg에 우리가 map을 만들것이기 때문에 많은 요소들이 들어갑니다. 그러므로 group으로 감싸줘야 하므로 g태그를 붙입니다. 
 
 이것이 D3로 시각화하는 첫단계입니다. 
 1. 재료를 선택하고(topojson) 
-2. 그 재료를 쓸 캔버스를 설정(select, append, attr)
+2. 그 재료를 쓸 캔버스를 설정합니다(select, append, attr)
 
+#### 3) 
 ```js
-let projection = d3.geoMercator()
+const projection = d3.geoMercator()
 .scale(1)
 .translate([0, 0]); 
 ```
 이 지도의 투사법은 메르카토르 투사법을 씁니다. 지구는 동그라한 구형태이기 때문에 이를 평면에 펼쳐서 보기 위해서는 투사법이 존재하며 많은 투사법이 있지만 우리가 많이 보는 지도가 바로 메르카토르 투사법을 쓴 지도 입니다. 메르카토르투사법, 초기 스케일, 초기 translate를 설정해서 초기 projection 이라는 투사법이라는 객체를 셋팅합니다. 
+
  > 이외에도 Orthographic이라는 투사법도 있습니다. 
+ 
+#### 4) bounds
 ```js
 const path = d3.geoPath().projection(projection);
-const bounds = path.bounds(geojson);
-const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
-const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
-const scale = 1 /Math.max(widthScale, heightScale);
-const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
-const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
-const offset = [xoffset, yoffset];
-projection.scale(scale).translate(offset);
+const bounds = path.bounds(geojson); 
 ```
-이제 topojson이란 위경도의 정보들을 이용, 미리 설정해 놓은 투사법으로 패스를 땁니다. 우리가 보고 싶은 것은 이 패스의 중점을 보고 싶습니다. 우리나라의 중점을 말이죠 그렇기 위해서 xoffset과 yoffset등을 설정합니다. 추후 좀 더 자세히 설명하겠습니다. 
+`projection`을 통해 그리는 지도인 path 객체를 만들고 bounds를 통해 y축 끝값, x축 끝값을 걸정합니다. 이를 통해 그 path의 중앙설정을 할 수 있습니다. 이는 우리나라 지도의 중앙이겠죠?
 
-```js
-d3.geoPath().projection(projection)
-```
-아까 만들어 놓은 projection, 투사법으로 우리가 그리는 지도인 path 객체를 따냅니다. svg중 path요소로 지도를 그릴것이며 이제 그 준비단계가 끝났습니다. 
-```js
-const bounds = path.bounds(geojson);
-const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
-const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
-path.bounds(geojson)
-```
-우리는 이 path로 부터 중심을 잡고 싶습니다. 즉 경계를 잡고 싶다는 것이죠. 그러하려면 bounds를 써야 합니다.
-
-
-#### bounds
 bounds의 1차원배열은 path의  xmax와 xmin을 가리킵니다. bounds[0][x].. 의 0에서 0, 1을 통해 xmax와 xmin을 나타낼 수 있습니다.  즉, 최소경도, 최대경도(longitude)를 가리키게 됩니다. 
 bounds의 2차원배열은  ymax와 ymin을 가리킵니다. bounds[x][0]..의 0에서 0, 1을 통해 ymax와 ymin을 가리킵니다. 즉, 최소위도, 취대 위도를 가리킵니다. (latitude)
 
-#### scale
-
-그 다음 스케일을 정의해줍니다. 이 스케일은 지도에서 축척을 의미합니다. 넓은 우리나라 땅덩어리를 우리는 작은 화면에 표시해야 합니다.  일단 우리가 구한것은 path의 가장자리를 구한 것입니다. 
-
-이것중에서 가장 최대값을 
+#### 5) scale
+ 
 ```js
 const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
 const heightScale = (bounds[1][1] - bounds[0][1]) / height;  
 const scale = 1 /Math.max(widthScale, heightScale); 
 ```
-이렇게 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
+그 다음 스케일을 정의해줍니다. 이 스케일은 지도에서 축척을 의미합니다. 넓은 우리나라 땅덩어리를 우리는 작은 화면에 표시해야 합니다.  일단 우리가 구한것은 path의 가장자리를 구한 것입니다. 
+이것중에서 가장 최대값을 구하고 이를 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
 
-#### translate
+#### 6) translate
 ```js
 const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
 const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
@@ -224,15 +314,17 @@ projection.scale(scale).translate(offset);
 }
 ```
 위의 코드처럼 translate로 일단 사물을 옮기고 그 사물의 "크기의 50%" 만큼 또 옮기면 됩니다. 똑같이 우리가 보여주는 크기의 반인 bounds의 반을 x, y - offset으로 셋팅하고 translate를 합니다.  
+
+#### 7) selectAll
 ```js
 map
-.selectAll('path').data(geojson.features)
+.selectAll('path').data(_map.features)
 .enter().append('path') 
 .attr('d', path);  
 ``` 
+D3.js에서 가장 중요한 구조가 뭐냐고 묻는다면 단연코 `.selectAll(요소).data(데이타).enter().append(요소)` 일 것입니다. 데이타 만큼의 가상 DOM을 생성 후 그 DOM에 특정 요소들을 붙이는 것을 이 4가지의 메소드 체인으로 구성할 수 있습니다. _map.features라는 지역적정보를 바탕으로 path를 만들 수 있습니다.
 
-#### 자몽을 놓을 위도 경도에 따라 매핑하기
-우리는 자몽이라는 아이콘을 놓을 것입니다.  
+#### 8) 자몽을 놓을 위도 경도에 따라 매핑하기 
 ```js 
   const mapInfo = [
     {
@@ -247,29 +339,20 @@ map
     }
   ] 
 ```
-위의 코드처럼 자몽을 놓을 위경도 데이타를 만듭니다. 
+우리는 자몽이라는 아이콘을 놓을 것입니다. 자몽에 해당하는 lat(위도), lon(경도)를 설정합니다.  
 ```js
 const icons = svg.append('g').selectAll('svg')
 .data(mapInfo)
-.enter()  
+.enter()
 .append("svg:image")
 .attr("width", 50)
 .attr("height", 50)
-.attr('x' ,  d=> projection([d.lon, d.lat])[0])
-.attr('y' ,  d=> projection([d.lon, d.lat])[1] - 100)
-.attr('opacity', 0)
-.attr("xlink:href", require("../icons/grapefruit.svg")) 
-.on('click', d =>{
-  console.log(d)
-})
-.transition()
-.ease(d3.easeElastic)
-.duration(2000)
-.delay((d, i)=> i * 50)
+.attr('x', d => projection([d.lon, d.lat])[0])
+.attr('y', d => projection([d.lon, d.lat])[1])
 .attr('opacity', 1)
-.attr('y' ,  d=> projection([d.lon, d.lat])[1])
+.attr("xlink:href", require("../assets/grapefruit.svg"))
 ```  
-이렇게 매핑을 하면 됩니다. 우리가 만들어 놓은 위경도 자료 만큼 svg를 붙이는(append) 하는 것입니다. 저렇게 attr을 이용해서 가로 세로, x좌표, y좌표, 투명도를 설정해주면 됩니다. .on을 이용해서 클릭이벤트도 설정할 수 있습니다. transition을 이용해 애니메이션도 만들었습니다. 2초(2000밀리세컨드) 만큼동안 자몽이 떨어지는 예제입니다. delay((d, i) => i * 50)을 통해 자몽의 개수만큼 차례대로 지연시간을 걸어 놓습니다. 그렇다면 차례대로 자몽이 떨어지게 됩니다. 예를 들어 자몽1은 0, 자몽2는 50밀리세컨드만큼 늦어지게 되는 것입니다. 
+이렇게 매핑을 하면 됩니다. 우리가 만들어 놓은 위경도 자료 만큼 svg를 붙이는(append) 하는 것입니다. 저렇게 attr을 이용해서 가로 세로, x좌표, y좌표, 투명도를 설정해주면 됩니다.  
  
 #### projection 
 ```js
@@ -292,8 +375,8 @@ const zoomed = () =>{
 const zoom = d3.zoom().scaleExtent([1, 8]).on('zoom', zoomed)
 svg.call(zoom)
 ```
-줌이벤트는 간단합니다. 이렇게 줌을 걸어주고자 하는 group에 transform 특성에 해당 event를 추가하고 zoom이 큰 svg에서 발동할 때마다 미리 설정해 놓은 이벤트들이 작동하게끔 설정해주면 됩니다.   
-call은 자바스크립트의 call을 생각하면 됩니다.
+줌이벤트는 간단합니다. 이렇게 줌을 걸어주고자 하는 group에 transform 특성에 해당 event를 추가하고 zoom이 큰 svg에서 발동할 때마다 미리 설정해 놓은 이벤트들이 작동하게끔 설정해주면 됩니다. call은 자바스크립트의 call을 생각하면 됩니다.
+
 #### call
 ```js
 const 큰돌 = {
@@ -309,18 +392,97 @@ console.log(큰돌)
 ```
 어떠한 함수를 실행하는데 객체를 넣어서 기본값을 설정할 수 있습니다. 
 
-#### 4.2.3 지도 매핑모듈과 zoom이벤트
+이렇게 D3.js를 이용해서 가벼운 지도예제를 만들어 보았습니다. 이를 응용해서 많은 것들을 구현할 수 있습니다. 다양한 예제들은 https://bl.ocks.org/mbostock 를 통해 볼 수 있습니다.
 
+이렇게 다 만든 결과물의 모습을 이렇습니다. 
+
+![자몽지도](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_지도.gif)  
 ### 4.3 D3.js : 증가하는 숫자
-#### 4.3.1 d3.pie소개
-#### 4.3.2 d3 interporate 
-#### 4.3.3 증가하는 숫자 만들기  
+좀 더 재밌는 예제를 만들어보도록 하겠습니다. 숫자가 증가하는 예제입니다. 
+
+#### 전체코드 : MEVN/4장/sensor/src/views/Number.vue 
+필수적인 코드만 차근차근 살펴보겠습니다. 
+#### 4.3.1 화면 설정 및 반지름설정
+```js
+const width = window.innerWidth - 20;
+const height = window.innerHeight - 20; 
+const radius = Math.min(width, height) / 3;  
+```
+현재 위도우의 width와 height에 맞춰 width, height를 잡고 그에 따라 반지름을 잡습니다.
+#### 4.3.2 format설정 
+```js
+const format = d3.format(".0%"); 
+``` 
+d3.format을 이용하면 쉽게 어떠한 숫자에 포맷을 설정할 수 있습니다. 예를 들어 `1f`는 소수점1자리까지, `.0%`는 퍼센트 단위로도 가능합니다.  
+#### 4.3.3 영역설정
+```js
+const group = d3.select("svg")
+.attr("width", width)
+.attr("height", height)
+.append("g")
+.attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");     
+
+const textDOM = group.append("text")
+.attr("text-anchor", "middle")
+.attr("dy", ".3em");
+```
+전과 똑같이 svg를 선택(select)를 하고 attr-width, height로 영역을 설정하고 transform 으로 중앙정렬합니다.  그리고 증가하는 숫자를 담을 text라는 요소를 설정합니다. 
+
+#### 4.3.4 파이 제너레이터
+```js
+const arc = d3.arc()
+.innerRadius(radius * 0.7)
+.outerRadius(radius); 
+const pieGenerator = d3.pie().sort(null)
+const background = group.append("path")
+.data(pieGenerator([1])) 
+.attr("class", (d, i) =>"backColor") 
+.attr("d", arc)
+
+const foreground = group.append("path")
+.data(pieGenerator([0, 100])) 
+.attr("class", (d, i) =>`frontColor${i}`) 
+.attr("d", arc)
+``` 
+숫자를 중심으로 증가하는 원을 만들기 전에 설정을 해야 합니다.``d3.arc().innerRadius(radius * 0.7).outerRadius(radius)` pie를 설정할 때 안쪽반지름(inner), 바깥쪽의 영역(outer)를 설정합니다. 안쪽을 0.7로 설정을 했으므로 안이 좀 비어있는 파이를 만들 수 있습니다.  그리고 `pieGenerator`를 이용해서 특정 배열을 통해 pie 제너레이터를 만듭니다. 그 제너레이터로 정확한 도넛형태의 모양을 그릴 수 있습니다.  
+
+#### 4.3.5 애니메이션
+```js
+function arcTween(pie){
+  return function(d){ 
+    const interpolate  = d3.interpolate(pie[0].startAngle,pie[0].endAngle);
+    const interpolateText  = d3.interpolate(0,pie[0].value); 
+    return function(t){
+      d.endAngle = interpolate(t);
+      textDOM.text(format(interpolateText(t) / 100));
+      return arc(d);
+    }
+  } 
+}   
+foreground.transition().duration(1500).attrTween("d", arcTween(pieGenerator([80, 20]))).delay(1000)
+```
+대망의 애니메이션입니다. 
+interpolate는 2가지의 값을 이용해서 0부터 1까지의 값에 매핑을 합니다. 예제를 보면 쉽습니다.  
+```js
+var i = d3.interpolateNumber(10, 20);
+i(0.0); // 10
+i(0.2); // 12
+i(0.5); // 15
+i(1.0); // 20
+```
+보간하다라는 뜻을 가진 이 interpolate는 주어진 2개의 값을 이용해서 그 사잇값들을 만듭니다.
+이를 이용해서 우리는 애니메이션을 ㅁ나들 수 있습니다. `pieGenerator([0, 100])`에서 부터 `pieGenerator([80, 20])`까지의 애니메이션을 하기 위해 `arcTween`이라는 것을 만들었습니다. 이를 안사용하면 어떻게 될까요? 아무것도 일어나지 않습니다. 애니메이션을 사용하려면 매 순간순간마다 프레임이 있어야 하는데 `arcTween` 없이는 두개의 값사이의 프레임을 만들 사람이 없기 때문입니다.
+
+![증가하는 숫자](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_number.gif) 
+
+이렇게 2개의 D3예제를 통해 가볍게 D3를 범접했습니다. 
   
 ### 4.4  실시간 센서시각화사이트 : REST API 구축
-#### 4.4.1 REST API 특징
-#### 4.4.2 CORS 및 주의사항
-#### 4.4.3 요청 제한 및 IP 설정   
-#### 4.4.4 센서생성 서버 REST API 구축
+#### 4.4.1 아키텍처 구축
+#### 4.4.2 REST API 특징 
+#### 4.4.3 CORS 및 주의사항
+#### 4.4.4 요청 제한 및 IP 설정   
+#### 4.4.5 센서생성 서버 REST API 구축
  
 ### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인
 #### 4.5.1 websocket방식과 polling 방식 비교
